# api-twitter

./: .env  pyproject.toml  requirements.txt
src/: services.py
