[tool.poetry]
name = "python-tweet"
version = "0.1.0"
description = ""
authors = ["LeoLarangeira <leonardo.alves.larangeira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.14.0"
python-dotenv = "^1.0.1"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
